--- a/block-explorer/app/index.html
+++ b/block-explorer/app/index.html
@@ -15,6 +15,7 @@
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/carousel.css" rel="stylesheet">
+  <link href="css/theme.css" rel="stylesheet">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -23,7 +24,31 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
+      <!-- NAVBAR
+  ================================================== -->
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#/block-list">Block Explorer</a>
+      </div>
+    </div>
+  </div>
+
   <div ng-view></div>
+
+  <div>
+  <!-- FOOTER -->
+  <footer>
+    <p class="text-center">&copy; 2014 Scott Logic Ltd.</p>
+  </footer>
+
+</div><!-- /.container -->
 
   <div class="text-center">Version: v<span app-version></span></div>
 
