Displays transactions into block
Uses d3 and its tree functionality to do this. Displays the transactions
in a tree, where the root node is the current block. We set an animation
for when the tree is first displayed, and we label the current block in
the tree.

--- a/block-explorer/app/index.html
+++ b/block-explorer/app/index.html
@@ -16,6 +16,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/carousel.css" rel="stylesheet">
   <link href="css/theme.css" rel="stylesheet">
+  <link href="css/blockDetails.css" rel="stylesheet">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
@@ -66,5 +67,6 @@
   <script src="js/directives.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/d3.js"></script>
 </body>
 </html>
