Moves block visualisation into its own service
The controllers module was starting to get a little big. We now make the
block details controller depend on the block visualiser service.

--- a/block-explorer/app/index.html
+++ b/block-explorer/app/index.html
@@ -63,6 +63,7 @@
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/block-visualiser.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
